--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>A compléter !</title>
+		<title>Festival des Films de Plein Air - Le Voyage</title>
 		
 		<!--Metatags-->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="description" content="">
+		<meta name="description" content="Festival de films d’auteur en plein air au Parc Monceau à Paris, du 5 au 7 août, sur le thème du voyage.">
 		
 		<!--Open graph data-->
 		<meta property="og:title" content=""/>
@@ -69,18 +69,17 @@
 			<div class="container">
 				<div class="row">
 					<aside class="col-lg-6">
-						
-						<!--<img src="images/01-welcomeAside.jpg" class="img-fluid" alt="Films en plein air">-->
+						<img src="images/01-welcomeAside.jpg" class="img-fluid" alt="Films en plein air" style="height:100%">
 					</aside>
 					<article class="col-lg-6">
-						<p>-Festival-</p>
+						<p>Festival des Films de Plein Air</p>
 						<div class="date">
-							<span>-Mois-</span>
-							<span class="textshadow">-Année-</span>
-							<span>-Edition-</span>
+							<span>Août</span>
+							<span class="textshadow">2025</span>
+							<span>8ᵉ édition</span>
 						</div>
-						<p>-Slogan-</p>
-						<a href="films.html" class="btn btn-custom">-Programme-</a>
+						<p>Un voyage au cœur du cinéma d’auteur</p>
+						<a href="films.html" class="btn btn-custom">Voir le programme</a>
 					</article>
 				</div>
 			</div>
@@ -92,13 +91,13 @@
 			<div class="container">
 				<div class="row">
 					<article class="col-lg-6">
-						<h2 id="about">-Titre-</h2>
-						<p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
+						<h2 id="about">À propos du festival</h2>
+						<p>Chaque été, notre festival propose une sélection unique de films d’auteur en plein air, dans le cadre idyllique du parc Monceau. Cette année, le thème est « Le voyage » : des récits intimes aux aventures épiques, laissez-vous emporter par le 7e art.
                         </p>
 						<a href="#booking" class="btn btn-custom"> Je réserve !</a>
 					</article>
 					<aside class="col-lg-6 order-first order-lg-2">
-						<!--<img src="images/02-parcMonceauAside.jpg" class="img-fluid" alt="Parc Monceau">-->
+						<img src="images/02-parcMonceauAside.jpg" class="img-fluid" alt="Parc Monceau">
 					</aside>
 				</div>
 			</div>
@@ -110,14 +109,14 @@
 			<div class="container">
 				<div class="row">
 					<aside class="col-lg-6">
-						<!--<img src="images/03-actuAside.jpg" class="img-fluid" alt="Actualité">-->
+						<img src="images/03-actuAside.jpg" class="img-fluid" alt="Actualité">
 					</aside>
 					<article class="col-lg-6">
-						<h2 id="news">-Titre-</h2>
-						<p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit
-
-						<p>-Lien possible-<a href="#">ici</a>.</p>
-						<p>In principio creavit Deus caelum et terram terra autem erat inanis vacua principio creavit </p>
+						<h2 id="news">Actualités du Festival</h2>
+						<p>🎬 L'édition 2025 du Festival des Films de Plein Air aura lieu du <strong>5 au 7 août</strong> au Parc Monceau. Préparez-vous à voyager à travers une sélection exceptionnelle de films d’auteur autour du thème « Le voyage ».
+						</p>
+						<p>-Lien possible-<a href="https://www.festivalpleinair.com/">ici</a>.</p>
+						<p>🤝 Cette année, nous avons le plaisir de collaborer avec de nouveaux partenaires, dont <strong>France Télévision</strong> et la <strong>Région Île-de-France</strong>.</p>
 						<a href="rendez-vous-le-05-aout.html" class="btn btn-custom">Lire la suite</a>
 					</article>
 				</div>
@@ -133,43 +132,43 @@
 					<!--<div class="col-12 col-sm-4 col-md2 imgResponsive">
 						<a href="#"><img src="images/01lesFiguresDeLombre.png"></a>
 					</div>-->
-					<div class="col-12"><h2 id="movie">-Titre-</h2></div>
+					<div class="col-12"><h2 id="movie">>Notre sélection 2025 : Le Voyage</h2></div>
 					<div class="col-sm-4 col-md-3 col-lg-2 ">
 						<a href="films.html#01film" class="hoverImg" ><img src="images/01-films.jpg" class="img-fluid" alt="affiche film"></a>
 						
 					</div>
 					<div class="col-sm-4 col-md-3 col-lg-2 ">
-						<a href="films.html#02film"><img src="images/02-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#02film"><img src="images/02-films.jpg" class="img-fluid" alt="Into the Wild"></a>
 					</div>
 					<div class="col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#03film"><img src="images/03-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#03film"><img src="images/03-films.jpg" class="img-fluid" alt="The Secret Life of Walter Mitty"></a>
 					</div>
 					<div class=" col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#04film"><img src="images/04-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#04film"><img src="images/04-films.jpg" class="img-fluid" alt="L'Auberge Espagnole"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#05film"><img src="images/05-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#05film"><img src="images/05-films.jpg" class="img-fluid" alt="Tracks"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#06film"><img src="images/06-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#06film"><img src="images/06-films.jpg" class="img-fluid" alt="Le Grand Voyage"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#07film"><img src="images/07-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#07film"><img src="images/07-films.jpg" class="img-fluid" alt="The Motorcycle Diaries (Carnets de voyage)"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#08film"><img src="images/08-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#08film"><img src="images/08-films.jpg" class="img-fluid" alt="Before Sunrise"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#09film"><img src="images/09-films.jpg"class="img-fluid" alt=""></a>
+						<a href="films.html#09film"><img src="images/09-films.jpg"class="img-fluid" alt="Lost in Translation"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#10film"><img src="images/10-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#10film"><img src="images/10-films.jpg" class="img-fluid" alt="Paris, Texas"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#11film"><img src="images/11-films.jpg"class="img-fluid" alt=""></a>
+						<a href="films.html#11film"><img src="images/11-films.jpg"class="img-fluid" alt="La Route d’Istanbul"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#12film"><img src="images/12-films.jpg" class="img-fluid" alt=""></a>
+						<a href="films.html#12film"><img src="images/12-films.jpg" class="img-fluid" alt="Wild" style="height: 95%"></a>
 					</div>
 				</div>
 			</div>
