--- a/index.html
+++ b/index.html
@@ -299,33 +299,35 @@
 					</div>
 
                     <div class="col-6 col-md-2 mb-3">
-                        <h5>Liens</h5>
+                        <h5>🔗Liens</h5>
                         <div class="footerLinks">
-                            <a href="index.html">Accueil</a>
-                            <a href="films.html">Les Films</a>
-                            <a href="blog.html">Actualités</a>
-                            <a href="contact.html">Contact</a>
-                            <a href="mentions-legales.html">Mentions légales</a>
+                            <a href="index.html">🏠 Accueil</a>
+                            <a href="films.html">🎬 Les Films</a>
+                            <a href="blog.html">📰 Actualités</a>
+                            <a href="contact.html">✉️ Contact</a>
+                            <a href="mentions-legales.html">⚖️ Mentions légales</a>
                         </div>
                     </div>
+					<!-- 📞 Contact -->
 					<div class="col-6 col-md-3 mb-3">
-                        <h5>Contact</h5>
-                        <div class="contactIcons mb-3">
-                            <p><span class="pr-3"><i class="fas fa-home"></i></span>Parc Monceau, Paris</p>
-                            <p><span class="pr-3"><i class="fas fa-envelope"></i></span>contact@festivalpleinair.fr</p>
-                            <p><span class="pr-3"><i class="fas fa-phone"></i></span>+33 1 23 45 67 89</p>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-3 mb-3">
-                        <h5>Partenariat</h5>
-                        <div class="contactIcons mb-3">
-							<ul class="list-unstyled">
-								<li>🎥 France Télévisions</li>
-								<li>🎞 Région Île-de-France</li>
-								<li>🎬 Mairie de Paris</li>
-                            </ul>
-                        </div>
-                    </div>
+						<h5>📞 Contact</h5>
+						<ul class="list-unstyled">
+						<li><i class="fas fa-map-marker-alt pr-2"></i> Parc Monceau, Paris</li>
+						<li><i class="fas fa-envelope pr-2"></i> contact@festivalpleinair.fr</li>
+						<li><i class="fas fa-phone pr-2"></i> +33 1 23 45 67 89</li>
+						</ul>
+					</div>
+					
+					<!-- 🤝 Partenaires -->
+					<div class="col-6 col-md-3 mb-3">
+						<h5>🤝 Partenaires</h5>
+						<ul class="list-unstyled">
+						<li><i class="fas fa-film pr-2"></i> France Télévisions</li>
+						<li><i class="fas fa-video pr-2"></i> Région Île-de-France</li>
+						<li><i class="fas fa-city pr-2"></i> Mairie de Paris</li>
+						</ul>
+					</div>
+  
                     <div class="col-12 col-md-3 social" style="margin-top: -90px;">
 						<h5 class="mt-3">📣 Suivez-nous</h5>
                         <div class="socialicons">
