--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 						<a href="films.html#11film"><img src="images/11-films.jpg"class="img-fluid" alt="La Route d’Istanbul"></a>
 					</div>
 					<div class="col-12 col-sm-4 col-md-3 col-lg-2">
-						<a href="films.html#12film"><img src="images/12-films.jpg" class="img-fluid" alt="Wild" style="height: 95%"></a>
+						<a href="films.html#12film"><img src="images/12-films.jpg" class="img-fluid" alt="Wild"></a>
 					</div>
 				</div>
 			</div>
@@ -290,60 +290,74 @@
 		<!--end contact-->
 
 		<!--07.footer-->
-		<footer class="container-fluid footer">
-            <div class="container py-3">
-                <div class="row">
-					<div class="col-12 col-md-4 mb-4">
-						<h4 class="text-white">🎬 Festival Plein Air</h4>
-						<p>Du 5 au 7 août 2025, vivez l’expérience du cinéma d’auteur sous les étoiles, dans le cadre enchanteur du Parc Monceau à Paris.</p>
-					</div>
-
-                    <div class="col-6 col-md-2 mb-3">
-                        <h5>🔗Liens</h5>
-                        <div class="footerLinks">
-                            <a href="index.html">🏠 Accueil</a>
-                            <a href="films.html">🎬 Les Films</a>
-                            <a href="blog.html">📰 Actualités</a>
-                            <a href="contact.html">✉️ Contact</a>
-                            <a href="mentions-legales.html">⚖️ Mentions légales</a>
-                        </div>
-                    </div>
-					<!-- 📞 Contact -->
-					<div class="col-6 col-md-3 mb-3">
-						<h5>📞 Contact</h5>
-						<ul class="list-unstyled">
-						<li><i class="fas fa-map-marker-alt pr-2"></i> Parc Monceau, Paris</li>
-						<li><i class="fas fa-envelope pr-2"></i> contact@festivalpleinair.fr</li>
-						<li><i class="fas fa-phone pr-2"></i> +33 1 23 45 67 89</li>
-						</ul>
-					</div>
-					
-					<!-- 🤝 Partenaires -->
-					<div class="col-6 col-md-3 mb-3">
-						<h5>🤝 Partenaires</h5>
-						<ul class="list-unstyled">
-						<li><i class="fas fa-film pr-2"></i> France Télévisions</li>
-						<li><i class="fas fa-video pr-2"></i> Région Île-de-France</li>
-						<li><i class="fas fa-city pr-2"></i> Mairie de Paris</li>
-						</ul>
-					</div>
+		<!--07.footer-->
+<footer class="container-fluid footer bg-dark text-white">
+	<div class="container py-5">
+	  <div class="row gy-4">
   
-                    <div class="col-12 col-md-3 social" style="margin-top: -90px;">
-						<h5 class="mt-3">📣 Suivez-nous</h5>
-                        <div class="socialicons">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-youtube"></i></a>
-                            <a href="#"><i class="fab fa-instagram"></i></a>
-                        </div>
-                    </div>
-                </div>	
-            </div>
-            <div class="socketBkg ">
-                <div class="socket text-center">
-					<p class="text-center small">© 2025 Festival des Films de Plein Air — Design par Université Côte d’Azur</p>
-                </div>
-            </div>
-		</footer>
+		<!-- 🎬 Présentation -->
+		<div class="col-12 col-md-3">
+		  <h5>🎬 Festival Plein Air</h5>
+		  <p>Du 5 au 7 août 2025, vivez l’expérience du cinéma d’auteur sous les étoiles, dans le cadre enchanteur du Parc Monceau à Paris.</p>
+		</div>
+  
+		<!-- 🔗 Liens -->
+		<div class="col-6 col-md-2">
+		  <h5>🔗 Liens</h5>
+		  <ul class="list-unstyled footerLinks">
+			<li><a href="index.html">🏠 Accueil</a></li>
+			<li><a href="films.html">🎬 Les Films</a></li>
+			<li><a href="blog.html">📰 Actualités</a></li>
+			<li><a href="contact.html">✉️ Contact</a></li>
+			<li><a href="mentions-legales.html">⚖️ Mentions légales</a></li>
+		  </ul>
+		</div>
+  
+		<!-- 📞 Contact -->
+		<div class="col-6 col-md-3">
+		  <h5>📞 Contact</h5>
+		  <ul class="list-unstyled">
+			<li><i class="fas fa-map-marker-alt pr-2"></i> Parc Monceau, Paris</li>
+			<li><i class="fas fa-envelope pr-2"></i> contact@festivalpleinair.fr</li>
+			<li><i class="fas fa-phone pr-2"></i> +33 1 23 45 67 89</li>
+		  </ul>
+		</div>
+  
+		<!-- 🤝 Partenaires -->
+		<div class="col-12 col-md-4 text-center">
+		  <h5>🤝 Partenaires</h5>
+		  <div class="d-flex justify-content-center align-items-center flex-wrap gap-3 mt-3">
+			<a href="https://www.francetelevisions.fr/" target="_blank" class="logo-link">
+			  <img src="images/imgTH.png" alt="France Télévisions" style="max-height: 40px;">
+			</a>
+			<a href="https://www.iledefrance.fr/" target="_blank" class="logo-link">
+			  <img src="images/logo-region-ile-de-france.png" alt="Région Île-de-France" style="max-height: 40px;">
+			</a>
+			<a href="https://www.paris.fr/" target="_blank" class="logo-link">
+			  <img src="images/Ville_de_Paris_logo_2019.svg" alt="Mairie de Paris" style="max-height: 40px;">
+			</a>
+		  </div>
+		</div>
+  
+		<!-- 📣 Réseaux sociaux -->
+		<div class="col-12 text-center mt-4">
+		  <h5>📣 Suivez-nous</h5>
+		  <div class="socialicons d-flex justify-content-center gap-3 mt-2">
+			<a href="#"><i class="fab fa-facebook-f fa-lg"></i></a>
+			<a href="#"><i class="fab fa-youtube fa-lg"></i></a>
+			<a href="#"><i class="fab fa-instagram fa-lg"></i></a>
+		  </div>
+		</div>
+  
+	  </div>
+	</div>
+  
+	<!-- 🔻 Bas de page -->
+	<div class="socketBkg bg-secondary text-center py-3">
+	  <p class="mb-0 small">© 2025 Festival des Films de Plein Air — Design par Université Côte d’Azur</p>
+	</div>
+  </footer>
+  
 		<!--end footer-->
 
 		<!--Scroll to top button-->
