--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>A compléter !</title>
+	<title>Contact | Festival des Films de Plein Air</title>
 		
 		<!--Metatags-->
 		<meta charset="utf-8">
@@ -33,7 +33,8 @@
 	<!--00.header-->
 	<nav class="navbar sticky-top navbar-expand-lg navbar-dark maNav">
 		<a class="navbar-brand" href="index.html">
-			<img src="images/logo.jpg" width="100"/>
+			<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" />
+
 		</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -51,7 +52,7 @@
 	<!--end header-->
 	<!--Map-->
 	<section class="container-fluid">
-		<iframe src="images/Carte_bis.jpg" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<iframe src="images/Carte.jpg" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
     </section>
 	<section class="container-fluid contactPage">
 		<div class="container py-5">
@@ -98,14 +99,14 @@
 				<div class="col-sm-12 col-md-6 address">
 					<h2>D'autres moyens de nous contacter</h2>
 					<div class="contactIcons mb-3">
-						<p><span class="pr-3"><i class="fas fa-home"></i></span>-Adresse-</p>
-						<p><span class="pr-3"><i class="fas fa-envelope"></i></span>-Mail-</p>
-						<p><span class="pr-3"><i class="fas fa-phone"></i></span>-Tél.-</p>
+						<p><span class="pr-3"><i class="fas fa-home"></i></span>Parc Monceau, 75008 Paris</p>
+						<p><span class="pr-3"><i class="fas fa-envelope"></i></span>contact@festivalpleinair.fr</p>
+						<p><span class="pr-3"><i class="fas fa-phone"></i></span>+33 1 23 45 67 89</p>
+
 					</div>
 					<h2>Accueil téléphonique</h2>
-					<p>
-						- A compléter.... -
-					</p>
+					<p>Du lundi au vendredi de 9h à 17h (heure de Paris).</p>
+
 					<div class="banContact"><img src="images/BanContact.jpg" alt=""></div>
 				</div>
 			</div>
@@ -115,54 +116,73 @@
 	
 
 	<!--07.footer-->
-	<footer class="container-fluid footer">
-		<div class="container py-3">
-            <div class="row">
-                <div class="col-12 col-md-3">
-                    <h2>Liens utiles</h2>
-                    <div class="footerLinks">
-                        <a href="index.html">Accueil</a>
-                        <a href="films.html">Les Films</a>
-                        <a href="blog.html">Actualités</a>
-                        <a href="contact.html">Contact</a>
-                        <a href="mentions-legales.html">Mentions légales</a>
-                    </div>
-                </div>
-                <div class="col-12 col-md-3 address">
-                    <h2>Contactez-nous</h2>
-                    <div class="contactIcons mb-3">
-                        <p><span class="pr-3"><i class="fas fa-home"></i></span>-Adresse-</p>
-                        <p><span class="pr-3"><i class="fas fa-envelope"></i></span>-Mail-</p>
-                        <p><span class="pr-3"><i class="fas fa-phone"></i></span>-Tél.-</p>
-                    </div>
-                </div>
-                <div class="col-12 col-md-3 partenaire">
-                    <h2>Partenariat</h2>
-                    <div class="contactIcons mb-3">
-                        <ul>
-                            <li>-Partenaire 1-</li>
-                            <li>-Partenaire 2-</li>
-                            <li>-Partenaire 3-</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-12 col-md-3 social">
-                    <h2>Suivez-nous !</h2>
-                    <div class="socialicons">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                    </div>
-                </div>
-            </div>	
-        </div>
-        <div class="socketBkg ">
-            <div class="socket text-center">
-                <p>Copyright - Site réalisé par <br>
-                    Université Côte d'Azur - <a href="https://univ-cotedazur.fr/" target="_blank">Univ-Côte d'Azur</a></p>
-            </div>
-        </div>
-	</footer>
+	<!--07.footer-->
+<footer class="container-fluid footer bg-dark text-white">
+	<div class="container py-5">
+	  <div class="row gy-4">
+  
+		<!-- 🎬 Présentation -->
+		<div class="col-12 col-md-3">
+		  <h5>🎬 Festival Plein Air</h5>
+		  <p>Du 5 au 7 août 2025, vivez l’expérience du cinéma d’auteur sous les étoiles, dans le cadre enchanteur du Parc Monceau à Paris.</p>
+		</div>
+  
+		<!-- 🔗 Liens -->
+		<div class="col-6 col-md-2">
+		  <h5>🔗 Liens</h5>
+		  <ul class="list-unstyled footerLinks">
+			<li><a href="index.html">🏠 Accueil</a></li>
+			<li><a href="films.html">🎬 Les Films</a></li>
+			<li><a href="blog.html">📰 Actualités</a></li>
+			<li><a href="contact.html">✉️ Contact</a></li>
+			<li><a href="mentions-legales.html">⚖️ Mentions légales</a></li>
+		  </ul>
+		</div>
+  
+		<!-- 📞 Contact -->
+		<div class="col-6 col-md-3">
+		  <h5>📞 Contact</h5>
+		  <ul class="list-unstyled">
+			<li><i class="fas fa-map-marker-alt pr-2"></i> Parc Monceau, Paris</li>
+			<li><i class="fas fa-envelope pr-2"></i> contact@festivalpleinair.fr</li>
+			<li><i class="fas fa-phone pr-2"></i> +33 1 23 45 67 89</li>
+		  </ul>
+		</div>
+  
+		<!-- 🤝 Partenaires -->
+		<div class="col-12 col-md-4 text-center">
+		  <h5>🤝 Partenaires</h5>
+		  <div class="d-flex justify-content-center align-items-center flex-wrap gap-3 mt-3">
+			<a href="https://www.francetelevisions.fr/" target="_blank" class="logo-link">
+			  <img src="images/imgTH.png" alt="France Télévisions" style="max-height: 40px;">
+			</a>
+			<a href="https://www.iledefrance.fr/" target="_blank" class="logo-link">
+			  <img src="images/logo-region-ile-de-france.png" alt="Région Île-de-France" style="max-height: 40px;">
+			</a>
+			<a href="https://www.paris.fr/" target="_blank" class="logo-link">
+			  <img src="images/Ville_de_Paris_logo_2019.svg" alt="Mairie de Paris" style="max-height: 40px;">
+			</a>
+		  </div>
+		</div>
+  
+		<!-- 📣 Réseaux sociaux -->
+		<div class="col-12 text-center mt-4">
+		  <h5>📣 Suivez-nous</h5>
+		  <div class="socialicons d-flex justify-content-center gap-3 mt-2">
+			<a href="https://fr-fr.facebook.com"><i class="fab fa-facebook-f fa-lg"></i></a>
+			<a href="https://www.youtube.com"><i class="fab fa-youtube fa-lg"></i></a>
+			<a href="https://www.instagram.com"><i class="fab fa-instagram fa-lg"></i></a>
+		  </div>
+		</div>
+  
+	  </div>
+	</div>
+  
+	<!-- 🔻 Bas de page -->
+	<div class="socketBkg bg-secondary text-center py-3">
+	  <p class="mb-0 small">© 2025 Festival des Films de Plein Air — Design par Université Côte d’Azur</p>
+	</div>
+  </footer>
 	<!--end footer-->
 
 	<!--Scroll to top button-->
