--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Festival des Films de Plein Air - Le Voyage</title>
+		<title>Accueil | Festival des Films de Plein Air</title>
 		
 		<!--Metatags-->
 		<meta charset="utf-8">
@@ -30,7 +30,7 @@
 		<!--00.header-->
 		<nav class="navbar sticky-top navbar-expand-lg navbar-dark maNav">
 			<a class="navbar-brand" href="#">
-				<img src="images/logo.jpg" width="100"/>
+				<img src="images/logo_cinema.avif" width="85" style="border-radius: 50%;" />
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -180,7 +180,7 @@
 			<div class="container">
 				<div class="row">
 					<aside class="col-lg-6">
-						<img src="images/05-resaAside.jpg"class="img-fluid" alt="cinema sous les etoiles" style="height:85%; padding-top: 30px;">
+						<img src="images/05-resaAside.jpg"class="img-fluid" alt="cinema sous les etoiles" style="height:75%; padding-top: 30px;">
 					</aside>
 					<article class="col-lg-6">
 						<h2 id="booking">🌟 Réservez votre soirée sous les étoiles</h2>
@@ -247,7 +247,7 @@
 			<div class="container">
 				<div class="row">
 					<aside class="col-lg-6">
-						<img src="images/carte.jpg" alt="Carte du Parc Monceau" class="img-fluid" style=" padding-top: 35px; height: 87%;">
+						<img src="images/carte.jpg" alt="Carte du Parc Monceau" class="img-fluid" style=" padding-top: 35px; height: 60%;">
 					  </aside>
 					<article class="col-lg-6">
 						<h2 id="contact">💬 Une question ? Un mot doux ?</h2>
@@ -289,7 +289,7 @@
 		</section>
 		<!--end contact-->
 
-		<!--07.footer-->
+
 		<!--07.footer-->
 <footer class="container-fluid footer bg-dark text-white">
 	<div class="container py-5">
@@ -343,9 +343,9 @@
 		<div class="col-12 text-center mt-4">
 		  <h5>📣 Suivez-nous</h5>
 		  <div class="socialicons d-flex justify-content-center gap-3 mt-2">
-			<a href="#"><i class="fab fa-facebook-f fa-lg"></i></a>
-			<a href="#"><i class="fab fa-youtube fa-lg"></i></a>
-			<a href="#"><i class="fab fa-instagram fa-lg"></i></a>
+			<a href="https://www.facebook.com"><i class="fab fa-facebook-f fa-lg"></i></a>
+			<a href="https://www.youtube.com"><i class="fab fa-youtube fa-lg"></i></a>
+			<a href="https://www.instagram.com"><i class="fab fa-instagram fa-lg"></i></a>
 		  </div>
 		</div>
   
